fix: Keep progress marker from overflowing at pdf bottom.

--- a/content/web/readingMap.css
+++ b/content/web/readingMap.css
@@ -33,8 +33,8 @@
 }
 
 .rmProgressMark {
-    max-width: 50%;
-    max-height: 100%;
+    width: 50%;
+    height: 1%;
     position: absolute;
     left: 0;
 }
